Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-120266

[Windows] App hangs on destroying QML Video component during video playback

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.5.6, 6.7.1, 6.8.0 FF
    • 6.5.3, 6.6.1, 6.7.0 FF
    • Multimedia
    • None
    • Windows
    • cc8492f75 (dev), a2d802517 (6.7), 19bcacbee (6.6), 8ba632870 (tqtc/lts-6.5)

    Description

      App hangs sometimes on destroying QML Video during video playback.
      The problem is specific for "windows" multimedia backend only.

      Code sample:

      import QtQuick
      import QtQuick.Controls
      import QtMultimedia
      
      Window {
          width: 640
          height: 480
          visible: true
      
          Loader  {
              id: loader
              anchors.fill: parent
              active: false
              sourceComponent: Video {
                  source: 'qrc:/video_hang/test.mp4'
                  loops: -1
                  Component.onCompleted: play()
              }
          }
      
          Button {
              anchors.centerIn: parent
              text: "Push me!"
              onClicked: loader.active = !loader.active
          }
      }
      

      See full standalone example video_hang.zip

      Steps to reproduce:
      1. Build and run sample project
      2. Rapidly press "Press me!" button multiple times until the app hangs.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            johanseg Jøger Hansegård
            studiosus Vladimir Belyavsky
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews